# studipy

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.sh  shell.nix  testing.py  tests.py
.github/workflows/: python-publish.yml
examples/: downloader.py  studip-inbox.py
studipy/: __init__.py  browser.py  calendar.py  client.py  constants.py  courses.py  file_handler.py  files.py  helper.py  messages.py  types.py  users.py
