[tool.poetry]
name = "studipy"
version = "0.2.0"
description = "studip python api using JSONAPI"
authors = ["Frederik Richter"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
