[tool.poetry]
name = "studipy"
version = "0.2.5"
description = "studip python api using JSONAPI"
authors = ["Frederik Richter"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/FrederikRichter/studipy"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
pip = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
